--- a/src/app/admin/product/product.component.html
+++ b/src/app/admin/product/product.component.html
@@ -33,7 +33,7 @@
               <td class="data" mat-cell *matCellDef="let row">{{row.size_name}}</td>
             </ng-container>
             <ng-container matColumnDef="weight_name">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Weight</th>
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Weight(kg)</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.weight_name}}</td>
             </ng-container>
             <ng-container matColumnDef="product_page">
