--- a/src/app/admin/billpage/billpage.component.css
+++ b/src/app/admin/billpage/billpage.component.css
@@ -1,20 +1,21 @@
 #wrapper{
     width: 100vw;
+    height: 100%;
+}
+#printarea{
     width: 100%;
-    height: 100vh;
+    height: 50%;
 }
 .name_area{
     height: 70px;
-    font-size: 60px;
+    font-size: 30px;
     text-align: center;
 }
 
 .tbl  table {
-    border:0.1px solid rgb(247, 242, 242);
     font-size: 18px;
   }
   .tbl td{
-    border:0.1px solid rgb(247, 242, 242);
     height: 25px;
   }
 th{
@@ -35,9 +36,8 @@ th{
 }
 
 .final_amount{
-    width: calc(100% - 46px);
-    position: absolute;
-    bottom: 270px;
+    width: calc(100%);
+    position: relative;
 }
 .final_amount td{
     border: 1px solid rgba(0, 0, 0, 0.698);
@@ -79,36 +79,20 @@ button{
 .col3{
     width: 10%;
 }
+.col3{
+    width: 10%;
+}
 .col4{
     width: 25%;
 }
 
-#background_div{
-    width: calc(100% - 46px);
-    height: 500px;
+h3{
     position: absolute;
-    top: 255px;
-    left: 23px;
-    border: 1px solid rgba(0, 0, 0, 0.698);   
+    bottom: 47%;
+    right: 5px;
+
 }
-.box1{
-    width: 10%;
-    height: 500px;
-    border-right: 1px solid rgba(0, 0, 0, 0.698);
-    float: left;
-}
-.box2{
-    width: 55%;
-    height: 500px;
-    border-right: 1px solid rgba(0, 0, 0, 0.698);
-    float: left;
-}
-.box3{
-    width: 10%;
-    height: 500px;
-    border-right: 1px solid rgba(0, 0, 0, 0.698);
-    float: left;
-}
+
 @media print {
     button {
       display: none;
