--- a/src/app/admin/add-edit-production/add-edit-production.component.css
+++ b/src/app/admin/add-edit-production/add-edit-production.component.css
@@ -254,8 +254,7 @@ mat-toolbar {
 
 
 mat-form-field {
-  width: 290px;
-  margin-right: 15px;
+  margin-right: 7px;
   top: 5px;
 }
 
@@ -338,6 +337,9 @@ span {
   position: relative;
   top: -5px;
   left: 0px;
+}
+.small_box{
+  width: 95px;
 }
 
 @media (min-width:768px) and (max-width:1100px) {
