--- a/src/app/admin/add-edit-sale/add-edit-sale.component.html
+++ b/src/app/admin/add-edit-sale/add-edit-sale.component.html
@@ -126,13 +126,13 @@
 						<div class="column_first">
 							
 							<mat-form-field appearance="fill">
-								<mat-label>Available Quantity</mat-label>
-								<input formControlName="available_quantity" matInput placeholder="available quantity" readonly>
+								<mat-label>Available</mat-label>
+								<input formControlName="available_quantity" matInput placeholder="available" readonly>
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
-								<mat-label>Quantity</mat-label>
-								<input formControlName="product_quantity" matInput placeholder="Quantity"
+								<mat-label>{{action_qyt}}</mat-label>
+								<input formControlName="product_quantity" matInput placeholder={{action_qyt}}
 									(keyup)="desc_amt_cal()">
 							</mat-form-field>
 							
@@ -145,7 +145,7 @@
 							<br>
 
 
-							<mat-icon [hidden]="sale_action_btn" class="addButton" (click)="AddProduct()">add</mat-icon>
+							<mat-icon class="addButton" (click)="AddProduct()">add</mat-icon>
 						</div>
 					</form>
 
@@ -283,7 +283,7 @@
 
 							<!-- ---------------------------------------------Change--------------------------------------- -->
 							<div mat-dialog-action [align]="'end'" class="btn_div">
-								<button [hidden]="sale_action_btn" mat-raised-button (click)="finalsubmit()"
+								<button mat-raised-button (click)="finalsubmit()"
 									class="submitbtn" type="submit" [disabled]="!saleformfinal.valid">{{actionBTN}}<p>
 										Final
 										Submit</p></button>
