--- a/src/app/admin/billpage/billpage.component.html
+++ b/src/app/admin/billpage/billpage.component.html
@@ -1,5 +1,5 @@
 
-<div id="wrapper" >
+<div id="wrapper" class="A5">
   <div id="printarea">
     <table style="width:100%;" class="tbl">
       <tr>
@@ -7,39 +7,33 @@
         <td></td>
         <td style="text-align: right;"><button  (click)="onprint()" >Print</button></td>
       </tr>
-      <tr>
-        
+
+      <tr>   
         <td></td>
-        <td class="name_area">ADITYA AARADHYA CO. PVT. LTD.</td>
+        <td class="name_area"><b>ADITYA AARADHYA CO. PVT. LTD.</b></td>
         <td  style="text-align: right;">Mob:-6202042331<br>8969687189  </td>
       </tr>
       <tr>
+
         <td></td>
-        <td style="text-align: center;">Manufacturer:- Note Book & A4 size copie</td>
-        <td></td>
+        <td colspan="2" style="text-align: center;">Manufacturer:- Note Book & A4 size copie</td>
       </tr> 
       <tr>
         <td></td>
-        <td colspan="2" style="text-align: center;">पुलिस लाइन मैदान (फायरफायर ब्रिगेड कार्यालय)  रेलवे गुमटी के पश्चिम, दिग्घी कला हाजीपुर (वैशाली) 844101</td>
+        <td colspan="2" style="text-align: center;">पुलिस लाइन मैदान (फायरफायर ब्रिगेड कार्यालय)  रेलवे गुमटी के पश्चिम,<br> दिग्घी कला हाजीपुर (वैशाली) 844101</td>
        
       </tr> 
       <br>
-      
-      <tr>
-        <td></td>
-        <td><b>GST - </b>10AAUCA3887CIZO</td>
-        <td></td>
-      </tr>
+     
       <tr>
         <td></td>
         <td><b>Bill No: </b> {{ saledata.sale_bill_no}}</td>
-        
-        <td><b>Date:</b> {{saledata.sale_date}}</td>
+        <td><b>GST - </b>10AAUCA3887CIZO</td>
       </tr>
       <tr>
         <td></td>
         <td><b>Name: </b> {{ saledata.cust_name}}</td>
-        <td></td>
+        <td><b>Date:</b> {{saledata.sale_date}}</td>
       </tr>
       <tr>
         <td></td>
@@ -52,14 +46,18 @@
         <tr>
             <th>Sl. No.</th>
             <th>Particulars</th>
+            <th>Size</th>
             <th>Qty</th>
+            <th>Unit</th>
             <th>Rate</th>
             <th>Amount</th>
         </tr>
         <tr *ngFor="let sale of des_data ; let i = index">
             <td class="col1">{{i+1}}</td>
             <td class="col2">{{sale.product_name}}</td>
+            <td class="col3">{{sale.size_name}}</td>
             <td class="col3">{{sale.sale_dec_quantity}}</td>
+            <td class="col3">{{sale.unit_name}}</td>
             <td class="col3">{{sale.sale_rate}}</td>
             <td class="col4">{{sale.sale_dec_total_amount}}</td>
         </tr>
@@ -69,6 +67,8 @@
         <tr>
            <th class="col1"></th>
            <th class="col2"></th>
+           <th class="col3"></th>
+           <th class="col3"></th>
            <th class="col3"></th>
             <th class="col3"> Total: </th>
             <th  class="col4"> {{saledata.sale_total_amount
