--- a/src/app/admin/production/production.component.html
+++ b/src/app/admin/production/production.component.html
@@ -33,7 +33,7 @@
             </ng-container>  
             <ng-container matColumnDef="production_quantity">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
-              <td class="data" mat-cell *matCellDef="let row">{{row.production_quantity}}</td>
+              <td class="data" mat-cell *matCellDef="let row">{{row.production_quantity}} {{row.unit_name}}</td>
             </ng-container>  
             <ng-container matColumnDef="labor_cost">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Labor Cost</th>
@@ -58,7 +58,7 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             <tr class="mat-row" *matNoDataRow>
-              <td class="mat-cell" colspan="7">No data show"{{input.value}}"</td>
+              <td class="mat-cell" colspan="9">No data show"{{input.value}}"</td>
             </tr>
           </table>
           <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]"
