--- a/src/app/admin/billpage/billpage.component.html
+++ b/src/app/admin/billpage/billpage.component.html
@@ -9,9 +9,7 @@
       </tr>
 
       <tr>   
-        <td></td>
-        <td class="name_area"><b>ADITYA AARADHYA CO. PVT. LTD.</b></td>
-        <td  style="text-align: right;">Mob:-6202042331<br>8969687189  </td>
+        <td colspan="3" class="name_area"><b>ADITYA AARADHYA CO. PVT. LTD.</b></td>
       </tr>
       <tr>
 
@@ -20,7 +18,7 @@
       </tr> 
       <tr>
         <td></td>
-        <td colspan="2" style="text-align: center;">पुलिस लाइन मैदान (फायरफायर ब्रिगेड कार्यालय)  रेलवे गुमटी के पश्चिम,<br> दिग्घी कला हाजीपुर (वैशाली) 844101</td>
+        <td colspan="2" style="text-align: center;">पुलिस लाइन मैदान (फायरफायर ब्रिगेड कार्यालय)  रेलवे गुमटी के पश्चिम,<br> दिग्घी कला हाजीपुर (वैशाली) 844101<br>Mob:- 6202042331 , 8969687189</td>
        
       </tr> 
       <br>
@@ -28,12 +26,12 @@
       <tr>
         <td></td>
         <td><b>Bill No: </b> {{ saledata.sale_bill_no}}</td>
-        <td><b>GST - </b>10AAUCA3887CIZO</td>
+        <td  style="text-align: right;"><b>GST - </b>10AAUCA3887CIZO</td>
       </tr>
       <tr>
         <td></td>
         <td><b>Name: </b> {{ saledata.cust_name}}</td>
-        <td><b>Date:</b> {{saledata.sale_date}}</td>
+        <td style="text-align: right;"><b>Date:</b> {{saledata.sale_date}}</td>
       </tr>
       <tr>
         <td></td>
@@ -41,6 +39,7 @@
         <td></td>
       </tr>
     </table>
+    <br>
       <div class="middel_area">
       <table class="tbl_calc">
         <tr>
