--- a/src/app/admin/billpage/billpage.component.css
+++ b/src/app/admin/billpage/billpage.component.css
@@ -1,7 +1,8 @@
 #wrapper{
     width: 100vw;
     height: 100%;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 #printarea{
     width: 100%;
@@ -9,7 +10,7 @@
 }
 .name_area{
     height: 70px;
-    font-size: 20px;
+    font-size: 26px;
     text-align: center;
 }
 
