--- a/src/app/admin/production/production.component.html
+++ b/src/app/admin/production/production.component.html
@@ -32,11 +32,11 @@
               <td class="data" mat-cell *matCellDef="let row">{{row.product_name}}</td>
             </ng-container>  
             <ng-container matColumnDef="production_quantity">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity(Pcs)</th>
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity (Pcs)</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.production_quantity}} </td>
             </ng-container>  
             <ng-container matColumnDef="total_weight">
-              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Weight(Kg)</th>
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity (Kg)</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.total_weight}}</td>
             </ng-container>  
             <ng-container matColumnDef="total_amount">
