--- a/src/app/admin/add-edit-sale/add-edit-sale.component.html
+++ b/src/app/admin/add-edit-sale/add-edit-sale.component.html
@@ -2,7 +2,6 @@
 	<div class="view_notice">
 		<span class="notice_text">{{action_text}}</span>
 	</div>
-
 	<nav ngbNav #nav="ngbNav" class="nav-tabs" style="height: 46px;">
 		<!-- //////////////////////// for customer table data start ///////////////// -->
 		<ng-container ngbNavItem>
@@ -100,14 +99,13 @@
 								<mat-label>Size</mat-label>
 								<input formControlName="product_size_id" matInput placeholder="Size" readonly>
 							</mat-form-field>
-						</div>
-						<div class="column">
 
 							<mat-form-field appearance="fill">
 								<mat-label>Weight</mat-label>
 								<input formControlName="product_weight_id" matInput placeholder="Weight" readonly>
 							</mat-form-field>
-							<!-- <br> -->
+						</div>
+						<div class="column">
 							<mat-form-field appearance="fill">
 								<mat-label>Unit</mat-label>
 								<input formControlName="product_unit_id" matInput placeholder="unit" readonly>
@@ -123,27 +121,26 @@
 								<input formControlName="product_rate" matInput placeholder="unit"
 									(keyup)="desc_amt_cal()">
 							</mat-form-field>
-						</div>
-						<div class="column_first">
-							
+
 							<mat-form-field appearance="fill">
-								<mat-label>Available(Pcs)</mat-label>
-								<input formControlName="available_quantity" matInput placeholder="available(Pcs)" readonly>
-							</mat-form-field>
-							
-							<mat-form-field appearance="fill" >
-								<mat-label>Available(Kg)</mat-label>
-								<input formControlName="available_weight" matInput placeholder="available(Kg)" readonly>
+								<mat-label>Available (Pcs)</mat-label>
+								<input formControlName="available_quantity" matInput placeholder="available (Pcs)" readonly>
 							</mat-form-field>
 
 							<mat-form-field appearance="fill" >
-								<mat-label>Product Quantity</mat-label>
+								<mat-label>Available (Kg)</mat-label>
+								<input formControlName="available_weight" matInput placeholder="available (Kg)" readonly>
+							</mat-form-field>
+						</div>
+						<div class="column_first">
+							<mat-form-field appearance="fill" >
+								<mat-label>Quantity (Pcs)</mat-label>
 								<input formControlName="product_quantity" matInput placeholder="Product Quantity"
 									(keyup)="desc_amt_cal()" [readonly]="Production_qty">
 							</mat-form-field>
 
 							<mat-form-field appearance="fill">
-								<mat-label>Product Weight</mat-label>
+								<mat-label>Quantity (Kg)</mat-label>
 								<input formControlName="product_weight" matInput placeholder="Product Weight"
 									(keyup)="weight_amt_calc()" [readonly]="Production_kg">
 							</mat-form-field>
@@ -192,18 +189,18 @@
 
 										<ng-container matColumnDef="product_rate">
 											<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Rate</th>
-											<td class="data" mat-cell *matCellDef="let row">{{row.sale_rate}}</td>
+											<td class="data" mat-cell *matCellDef="let row">{{row.sale_rate  | currency:'INR':true}} {{row.unit_name}}</td>
 										</ng-container>
 
 										<ng-container matColumnDef="product_quantity">
-											<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity(Pcs)
+											<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity (Pcs)
 											</th>
 											<td class="data" mat-cell *matCellDef="let row">{{row.sale_dec_quantity}}
 											</td>
 										</ng-container>
 
 										<ng-container matColumnDef="product_weight">
-											<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity(Kg)
+											<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity (Kg)
 											</th>
 											<td class="data" mat-cell *matCellDef="let row">{{row.sale_dec_weight}}
 											</td>
@@ -213,7 +210,7 @@
 											<th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Amount
 											</th>
 											<td class="data" mat-cell *matCellDef="let row">
-												{{row.sale_dec_total_amount}}
+												{{row.sale_dec_total_amount  | currency:'INR':true}}
 											</td>
 										</ng-container>
 
@@ -281,14 +278,14 @@
 								<input type="number" formControlName="sale_gross_amount" matInput
 									placeholder="Payable Amount" >
 							</mat-form-field>
-						</div>
-						<div class="column_first">
 
 							<mat-form-field appearance="fill">
 								<mat-label>Paid</mat-label>
 								<input type="number" formControlName="sale_paid" matInput placeholder="Paid Amount"
 									(keyup)="paid_amt_cal()" >
 							</mat-form-field>
+						</div>
+						<div class="column_first">
 							<mat-form-field appearance="fill">
 								<mat-label>Dues</mat-label>
 								<input type="number" formControlName="sale_dues" matInput placeholder="Dues">
@@ -297,13 +294,12 @@
 							<input type="date" formControlName="sale_date" id="formdate"
 								[readOnly]="this.draft_data.status == 1">
 
+
+							<input class="final_btn" mat-raised-button type="button"  value="Final Submit"  (click)="finalsubmit()" [disabled]="!saleformfinal.valid">
+
+							
 							<!-- ---------------------------------------------Change--------------------------------------- -->
-							<div mat-dialog-action [align]="'end'" class="btn_div">
-								<button mat-raised-button (click)="finalsubmit()"
-									class="submitbtn" type="submit" [disabled]="!saleformfinal.valid">{{actionBTN}}<p>
-										Final
-										Submit</p></button>
-							</div>
+						
 						</div>
 					</form>
 				</div>
